어디되나보자

--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,29 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="kdt리액트프로젝트"
     />
+    <meta property="og:image" content="%PUBLIC_URL%/snsshareimg_2.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
-    <title>React App</title>
+    <title>청량마켓몰</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      
+⣠⡠⣠⢯⣺⣠⡠⡀⠀⡶⡵⡀⠀⡲⣲⡲⣲⣲⣲⡲⠀⢐⢮⢖⣄⠄⠠⣖⣖⣖⣖⣖⣖⠀⢜⣞⠄⠀⠀⡞⣖⢵⣺⡢⢐⢵⡣⢸⢺⡂
+⠘⠊⢳⢝⡮⠊⠚⢱⢧⢯⣫⠂⠀⡰⡤⣢⣔⢤⢞⣞⠄⠨⣳⣫⠚⠀⢐⢵⡣⠀⠀⡷⣕⠀⢺⣪⠅⠀⠀⡦⡦⡦⣳⢵⣲⣫⢎⢸⢕⡇
+⢤⢴⢽⠕⠯⡯⣲⢌⠡⣳⡳⡁⠀⡪⡯⣣⢥⡩⡥⡥⣔⠨⣞⢮⢫⠂⢐⢽⠮⠀⠀⣟⢮⠀⣚⢮⡫⡇⠀⣡⡩⡮⡳⠉⠨⡮⡇⢸⣕⠇
+⠋⠃⠁⠀⠀⢈⢘⡁⡀⠳⢽⠀⠀⠊⠋⠑⠃⡋⣃⢋⠈⠨⡺⣝⠀⠀⢐⢽⢝⠀⠀⣯⡳⠀⡸⡵⠅⠀⠀⠃⠋⠈⢀⣰⡲⡲⠀⠸⠪⠃
+⠀⠀⣀⣖⢽⢕⡯⣞⣝⢮⢆⡅⠀⢀⢤⢮⢯⡺⡵⣫⢞⣖⣌⠸⠀⠀⢐⢽⢕⡧⣳⡳⣝⠀⢼⢝⠅⠀⠀⢠⡲⣜⢮⡺⠊⠯⡻⣪⢖⡤
+⠀⢰⣕⢗⠝⠁⠁⠀⠑⠹⣳⢝⡦⡘⢵⡫⠃⠁⠈⠈⠑⣗⢵⣣⠀⠀⠀⠈⠀⠁⠀⠈⠀⠀⠈⠉⠂⠀⠀⠈⠊⠉⠀⠀⠀⠀⠀⠈⠁⠁
+⠀⢕⣗⢽⠀⠀⠀⠀⠀⠀⡌⠳⡽⡵⣢⡀⠀⠀⠀⠀⠀   ⣜⢗⣗⠄⠀⠐⣗⡄⠀⢀⢼⡊⠀⠀⡸⣺⡂⠀⠀⣳⠁⠀⠀⠀⢪⠇⠀⠀⠀
+⠀⠘⢮⡫⣗⢤⡠⡠⡤⡯⣺⢕⠈⠯⣞⢞⡤⣄⢄⢤⡲⡽⣕⠇⠀⠀⠨⣺⠺⣄⡮⢓⡇⠀⢠⢯⢀⢯⠄⠀⢮⠃⠀⠀⠀⢭⡃⠀⠀⠀
+⠀⠀⠀⠙⠪⢗⠽⡝⠵⠫⠃⠁⠀⠀⠈⠫⠞⡵⢯⠳⠝⠚⠀⠀⠀⠀⠨⡺⠀⠑⠁⠸⡊⢀⢯⠃⠉⢙⢵⠀⢯⡲⡔⡴⡀⢜⢦⢆⢦⠂
+
+    </noscript>
     <div id="root"></div>
 
   </body>
