반응형 헤더

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="kdt리액트프로젝트"
     />
+    <meta property="og:title" content="청량마켓몰" />
+    <meta property="og:type" content="테스트~~~" />
     <meta property="og:image" content="%PUBLIC_URL%/snsshareimg_2.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -18,16 +20,6 @@
   </head>
   <body>
     <noscript>
-      
-⣠⡠⣠⢯⣺⣠⡠⡀⠀⡶⡵⡀⠀⡲⣲⡲⣲⣲⣲⡲⠀⢐⢮⢖⣄⠄⠠⣖⣖⣖⣖⣖⣖⠀⢜⣞⠄⠀⠀⡞⣖⢵⣺⡢⢐⢵⡣⢸⢺⡂
-⠘⠊⢳⢝⡮⠊⠚⢱⢧⢯⣫⠂⠀⡰⡤⣢⣔⢤⢞⣞⠄⠨⣳⣫⠚⠀⢐⢵⡣⠀⠀⡷⣕⠀⢺⣪⠅⠀⠀⡦⡦⡦⣳⢵⣲⣫⢎⢸⢕⡇
-⢤⢴⢽⠕⠯⡯⣲⢌⠡⣳⡳⡁⠀⡪⡯⣣⢥⡩⡥⡥⣔⠨⣞⢮⢫⠂⢐⢽⠮⠀⠀⣟⢮⠀⣚⢮⡫⡇⠀⣡⡩⡮⡳⠉⠨⡮⡇⢸⣕⠇
-⠋⠃⠁⠀⠀⢈⢘⡁⡀⠳⢽⠀⠀⠊⠋⠑⠃⡋⣃⢋⠈⠨⡺⣝⠀⠀⢐⢽⢝⠀⠀⣯⡳⠀⡸⡵⠅⠀⠀⠃⠋⠈⢀⣰⡲⡲⠀⠸⠪⠃
-⠀⠀⣀⣖⢽⢕⡯⣞⣝⢮⢆⡅⠀⢀⢤⢮⢯⡺⡵⣫⢞⣖⣌⠸⠀⠀⢐⢽⢕⡧⣳⡳⣝⠀⢼⢝⠅⠀⠀⢠⡲⣜⢮⡺⠊⠯⡻⣪⢖⡤
-⠀⢰⣕⢗⠝⠁⠁⠀⠑⠹⣳⢝⡦⡘⢵⡫⠃⠁⠈⠈⠑⣗⢵⣣⠀⠀⠀⠈⠀⠁⠀⠈⠀⠀⠈⠉⠂⠀⠀⠈⠊⠉⠀⠀⠀⠀⠀⠈⠁⠁
-⠀⢕⣗⢽⠀⠀⠀⠀⠀⠀⡌⠳⡽⡵⣢⡀⠀⠀⠀⠀⠀   ⣜⢗⣗⠄⠀⠐⣗⡄⠀⢀⢼⡊⠀⠀⡸⣺⡂⠀⠀⣳⠁⠀⠀⠀⢪⠇⠀⠀⠀
-⠀⠘⢮⡫⣗⢤⡠⡠⡤⡯⣺⢕⠈⠯⣞⢞⡤⣄⢄⢤⡲⡽⣕⠇⠀⠀⠨⣺⠺⣄⡮⢓⡇⠀⢠⢯⢀⢯⠄⠀⢮⠃⠀⠀⠀⢭⡃⠀⠀⠀
-⠀⠀⠀⠙⠪⢗⠽⡝⠵⠫⠃⠁⠀⠀⠈⠫⠞⡵⢯⠳⠝⠚⠀⠀⠀⠀⠨⡺⠀⠑⠁⠸⡊⢀⢯⠃⠉⢙⢵⠀⢯⡲⡔⡴⡀⢜⢦⢆⢦⠂
 
     </noscript>
     <div id="root"></div>
